topics_list_style

--- a/index.html
+++ b/index.html
@@ -514,6 +514,20 @@
           margin-top: 1.5rem;
           /* increases space above the h3 */
         }
+    
+        /* Single-column list style */
+        #cfp ul {
+          list-style-type: disc;
+          padding-left: 1.5rem;
+          /* indentation for bullets */
+          margin-top: 0.5rem;
+          margin-bottom: 1rem;
+        }
+    
+        #cfp li {
+          margin-bottom: 0.5rem;
+          /* space between list items */
+        }
       </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
@@ -562,8 +576,7 @@
           <li>explainable geospatial artificial intelligence (GeoAI) and spatially informed AI</li>
           <li>imagery data and spatial representation</li>
           <li>knowledge representation for space and time</li>
-          <li>large-language models (LLMs) and foundation models (FMs), and their utility in spatial cognition and
-            representation</li>
+          <li>large-language models (LLMs) and foundation models (FMs), and their utility in spatial cognition and representation</li>
           <li>natural (human) language descriptions of space and place</li>
           <li>navigation, wayfinding, and mobility of sentient beings and robots</li>
           <li>ontology of space and time</li>
