--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@
           /* indentation for bullets */
           margin-top: 0.5rem;
           margin-bottom: 1rem;
+          text-align: left;      /* aligns list text to the left */
         }
     
         #cfp li {
