--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
           padding-left: 1.5rem;
           /* indentation for bullets */
           margin-top: 0.35rem;
-          margin-bottom: 1rem;
+          /* margin-bottom: 1rem; */
           text-align: left;      /* aligns list text to the left */
         }
     
@@ -598,7 +598,14 @@
     <section id="submissions">
       <div class="container section-title" data-aos="fade-up">
         <h2>Submissions<br></h2>
-        <p>Coming soon!</p>
+        <p>The COSIT 2026 review process is double-blind (excluding Journal Article or Book Presentation). All submitted
+          manuscripts should omit authors’ names, affiliations, and any other identifying information. This may include, but
+          is not restricted to acknowledgments, self-citations, and references to prior work by the author(s). Please use the
+          third person to identify your own prior work.<br></p>
+    
+        <p>Submissions must adopt the LIPIcs LaTeX template (see below). For an accepted contribution to be published in the
+          conference proceedings (full papers, short papers) or included in the conference program (short poster papers, journal
+          and book presentations), at least one of the paper authors must register by the registration deadline.</p>
       </div>
     </section>
 
