--- a/index.html
+++ b/index.html
@@ -603,9 +603,15 @@
           is not restricted to acknowledgments, self-citations, and references to prior work by the author(s). Please use the
           third person to identify your own prior work.<br></p>
     
-        <p>Submissions must adopt the LIPIcs LaTeX template (see below). For an accepted contribution to be published in the
+        <p>Submissions must adopt the <a href="https://www.dagstuhl.de/en/publications/lipics/instructions-for-authors"
+            target="_blank">LIPIcs LaTeX template</a> (see below). For an accepted contribution to be published in the
           conference proceedings (full papers, short papers) or included in the conference program (short poster papers, journal
-          and book presentations), at least one of the paper authors must register by the registration deadline.</p>
+          and book presentations), at least one of the paper authors must register by the registration deadline.<br></p>
+
+          <h3>Full Papers</h3>
+          <h3>Short Papers</h3>
+          <h3>Journal Article or Book Presentation</h3>
+
       </div>
     </section>
 
