--- a/index.html
+++ b/index.html
@@ -596,6 +596,22 @@
 
 
     <section id="submissions">
+      <style>
+        #submissions p {
+          text-align: justify;
+          margin-bottom: 1rem;
+          /* increases space below paragraphs */
+        }
+    
+        #submissions b {
+          color: #F82249;
+        }
+    
+        #submissions h3 {
+          margin-top: 1.5rem;
+          /* increases space above the h3 */
+        }
+      </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Submissions<br></h2>
         <p>The COSIT 2026 review process is double-blind (excluding Journal Article or Book Presentation). All submitted
