--- a/index.html
+++ b/index.html
@@ -603,8 +603,8 @@
           /* increases space below paragraphs */
         }
     
-        #submissions b {
-          color: #F82249;
+        #submissions a {
+          color: #0000EE;
         }
     
         #submissions h3 {
