--- a/index.html
+++ b/index.html
@@ -625,9 +625,26 @@
           and book presentations), at least one of the paper authors must register by the registration deadline.<br></p>
 
           <h3>Full Papers</h3>
+          <p>Full research papers of 12-20 pages will be reviewed by three members of the program committee. High-quality
+            submissions will be accepted for presentation at the conference and will be published in the conference proceedings.
+            Selection will be based on relevance to the conference theme and topics, scientific significance, novelty, relation to
+            previously published literature, clarity of presentation, and interdisciplinary considerations. Manuscripts must
+            describe original work that has not been submitted and published elsewhere.<br></p>
+    
           <h3>Short Papers</h3>
-          <h3>Journal Article or Book Presentation</h3>
+          <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature results.
+            All submissions will be reviewed by members of the program committee. Accepted submissions will be selected for either
+            oral or poster presentation at the conference. Authors of short papers accepted for oral presentation will have the
+            option of having their papers included in the conference proceedings. All other accepted short papers will be shared
+            in a non-archival digital repository.<br></p>
 
+          <h3>Journal Article or Book Presentation</h3>
+          <p>The conference will run a special thematic session dedicated to providing authors of recently published journal
+            research articles or books on spatial information theory the opportunity to present and share their work in front of
+            the COSIT audience. The article or book must have been published during the years 2024-2026 and should have not been
+            presented at other conferences in the discipline (e.g. COSIT2024, AGILE 2025, ACM SIGSPATIAL 2025 or GIScience 2025).
+            Submissions should include a citation and &lt;1 page summary of the paper's or book's relevance to COSIT. It will be
+            screened by the programme chairs with selection based on relevance to the conference theme and topics. Please submit material directly to <a href="mailto:cosit.uk@gmail.com">cosit.uk@gmail.com</a>.</p>
       </div>
     </section>
 
