--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         }
     
         #submissions a:hover {
-          color: #6161ff;
+          color: #87c4fd;
           /* slightly less blue on hover */
         }
     
