--- a/index.html
+++ b/index.html
@@ -739,7 +739,9 @@
     </section>
 
     <!-- Buy Tickets Section -->
-    <section id="register" class="buy-tickets section light-background">
+    <section id="register">
+          <!-- <section id="register" class="buy-tickets section light-background"> -->
+
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
