--- a/index.html
+++ b/index.html
@@ -535,46 +535,33 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
         <p>We are delighted to announce that the 17<sup>th</sup> edition of the <b>Conference on Spatial Information
-            Theory (COSIT)</b> will
-          be held in York, United Kingdom, from September 22<sup>nd</sup> to 25<sup>th</sup>, 2026!<br></p>
+            Theory (COSIT)</b> will be held in York, United Kingdom, from September 22<sup>nd</sup> to 25<sup>th</sup>, 2026!<br></p>
 
-        <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical aspects
-          of
-          space and spatial information. Spatial information theory examines how space and the external environment is
-          experienced, represented, and communicated by humans, agents and machines.<br></p>
+        <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical aspects of space
+          and spatial information. Spatial information theory examines how space and the external environment is experienced,
+          represented, and communicated by humans, agents and machines.<br></p>
 
-        <p>With the goal of advancing the field of spatial information science and its bordering research areas, work
-          presented at COSIT has explored how decoding and making sense of space shapes human agency in different
-          contexts.
-          Spatial information theory builds on a variety of perspectives on space; it advances computational models of
-          spaces, it
-          challenges consolidated methods in spatial analysis and Geographic Information Science and addresses how
-          cognitive
-          representations of space can be incorporated in formal models of space, at different scales, from geographic
-          to personal
-          space.<br></p>
+        <p>With the goal of advancing the field of spatial information science and its bordering research areas, work presented
+          at COSIT has explored how decoding and making sense of space shapes human agency in different contexts. Spatial
+          information theory builds on a variety of perspectives on space; it advances computational models of spaces, it
+          challenges consolidated methods in spatial analysis and Geographic Information Science and addresses how cognitive
+          representations of space can be incorporated in formal models of space, at different scales, from geographic to
+          personal space.<br></p>
 
-        <p>This COSIT’s edition theme will be <b>Cognition and Flows</b>, recognising the value of considering the
-          cognitive foundations of human behaviour and their role in shaping large-scale geographic flows and
-          interactions. Given the growing
-          wealth in large, detailed behavioural and environmental data capturing the ‘real world’, never have we had
-          such opportunity
-          to close the gap between our understanding of human spatial behaviour and aggregated flows e.g., mobility,
-          migration,
-          inequalities, economic activity, spread of information, etc. In addition to any topics related to spatial
-          information and cognition, we particularly encourage submissions that explore how cognition and behaviour
-          shape the production
-          of flows, their evolution, and ultimately influence the nature of spaces and societies.<br></p>
+        <p>This COSIT’s edition theme will be <b>Cognition and Flows</b>, recognising the value of considering the cognitive
+          foundations of human behaviour and their role in shaping large-scale geographic flows and interactions. Given the
+          growing wealth in large, detailed behavioural and environmental data capturing the <i>real world</i>, never have we had
+          such opportunity to close the gap between our understanding of human spatial behaviour and aggregated flows e.g.,
+          mobility, migration, inequalities, economic activity, spread of information, etc. In addition to any topics related to
+          spatial information and cognition, we particularly encourage submissions that explore how cognition and behaviour
+          shape the production of flows, their evolution, and ultimately influence the nature of spaces and societies. <br></p>
 
         <h3>COSIT Topics</h3>
         <p>COSIT is an intensive, single-track conference held over four days, featuring paper presentations and special
-          thematic sessions. It presents original research that spans a wide range of interdisciplinary topics, such as
-          spatial
-          cognition, wayfinding and navigation, spatial reasoning, place and space, human computer interaction,
-          intelligent agents, urban
-          analytics and their interactions with other disciplines, including spatial analysis, Geographic Information
-          Science,
-          neuroscience, cartography, philosophy of mind, and computer science.<br></p>
+          thematic sessions. It presents original research that spans a wide range of interdisciplinary topics, such as spatial
+          cognition, wayfinding and navigation, spatial reasoning, place and space, human computer interaction, intelligent
+          agents, urban analytics and their interactions with other disciplines, including spatial analysis, Geographic
+          Information Science, neuroscience, cartography, philosophy of mind, and computer science. <br></p>
 
         <p>We welcome contributions covering conference-relevant topics, such as but not limited to:<br></p>
         <ul>
@@ -650,40 +637,28 @@
           journal
           and book presentations), at least one of the paper authors must register by the registration deadline.<br></p>
 
-        <h3>Full Papers</h3>
-        <p>Full research papers of 12-20 pages will be reviewed by three members of the program committee. High-quality
-          submissions will be accepted for presentation at the conference and will be published in the conference
-          proceedings.
-          Selection will be based on relevance to the conference theme and topics, scientific significance, novelty,
-          relation to
-          previously published literature, clarity of presentation, and interdisciplinary considerations. Manuscripts
-          must
-          describe original work that has not been submitted and published elsewhere.<br></p>
+        <h3>Full papers</h3>
+        <p>Full research papers of 12-20 pages will be reviewed by three members of the programme committee. High-quality
+          submissions will be accepted for presentation at the conference and will be published in the conference proceedings.
+          Selection will be based on relevance to the conference theme and topics, scientific significance, novelty, relation to
+          previously published literature, clarity of presentation, and interdisciplinary considerations. Manuscripts must
+          describe original work that has not been submitted and published elsewhere. <br></p>
 
-        <h3>Short Papers</h3>
-        <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature
-          results.
-          All submissions will be reviewed by members of the program committee. Accepted submissions will be selected
-          for either
-          oral or poster presentation at the conference. Authors of short papers accepted for oral presentation will
-          have the
-          option of having their papers included in the conference proceedings. All other accepted short papers will be
-          shared
-          in a non-archival digital repository.<br></p>
+        <h3>Short papers</h3>
+        <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature results.
+          All submissions will be reviewed by members of the programme committee. Accepted submissions will be selected for
+          either oral or poster presentation at the conference. Authors of short papers accepted for oral presentation will have
+          the option of having their papers included in the conference proceedings. All other accepted short papers will be
+          shared in a non-archival digital repository. <br></p>
 
         <h3>Journal Article or Book Presentation</h3>
-        <p>The conference will run a special thematic session dedicated to providing authors of recently published
-          journal
-          research articles or books on spatial information theory the opportunity to present and share their work in
-          front of
-          the COSIT audience. The article or book must have been published during the years 2024-2026 and should have
-          not been
-          presented at other conferences in the discipline (e.g. COSIT2024, AGILE 2025, ACM SIGSPATIAL 2025 or GIScience
-          2025).
-          Submissions should include a citation and &lt;1 page summary of the paper's or book's relevance to COSIT. It
-          will be
-          screened by the programme chairs with selection based on relevance to the conference theme and topics. Please
-          submit material directly to <a href="mailto:cosit.uk@gmail.com">cosit.uk@gmail.com</a>.</p>
+        <p>The conference will run a special thematic session dedicated to providing authors of recently published journal
+          research articles or books on spatial information theory the opportunity to present and share their work in front of
+          the COSIT audience. The article or book must have been published during the years 2024-2026 and should have not been
+          presented at other conferences in the discipline (e.g. COSIT2024, AGILE 2025, ACM SIGSPATIAL 2025 or GIScience 2025).
+          Submissions should include a citation and &lt;1 page summary of the paper's or book's relevance to COSIT. It will be
+            screened by the programme chairs with selection based on relevance to the conference theme and topics. Please submit
+            material directly to <a href="mailto:cosit.uk@gmail.com">cosit.uk@gmail.com</a>.</p>
 
         <h3>Proceedings/Template</h3>
         <p>We offer Open Access publications for the refereed submission tracks in the <a
