--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#org-com">Organizing Committee</a></li>
-              <li><a href="#pro-com">Program Committee</a></li>
+              <li><a href="#pro-com">Programme Committee</a></li>
               <li><a href="#sponsors">Sponsors</a></li>
               <li><a href="https://geosensor.net/cositseries/" target="_blank">Conference Series</a></li>
               <!-- <li><a href="#gallery">Gallery</a></li> -->
@@ -1180,7 +1180,7 @@
 
     <section id="pro-com">
       <div class="container section-title" data-aos="fade-up">
-        <h2>Program Committee<br></h2>
+        <h2>Programme Committee<br></h2>
         <p>Coming soon!</p>
       </div>
     </section>
