--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
         <p>Submissions must adopt the <a href="https://www.dagstuhl.de/en/publications/lipics/instructions-for-authors"
             target="_blank">LIPIcs LaTeX template</a> (see below). For an accepted contribution to be published in the
-          conference proceedings (full papers, short papers) or included in the conference program (short poster papers,
+          conference proceedings (full papers, short papers) or included in the conference programme (short poster papers,
           journal
           and book presentations), at least one of the paper authors must register by the registration deadline.<br></p>
 
@@ -1093,7 +1093,7 @@
           <!-- Member 2 -->
           <div class="col-lg-4 col-md-5">
             <div class="member-info">
-              <h3>Program Chairs</h3>
+              <h3>Programme Chairs</h3>
 
               <div class="person">
                 <a href="https://www.liverpool.ac.uk/people/gabriele-filomena" target="_blank">
