cfp_thematic_sess

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
               <!-- <li><a href="#speakers">Keynote Speakers</a></li> -->
               <li><a href="#cfp">Call for Papers</a></li>
               <li><a href="#submissions">Submissions</a></li>
+              <li><a href="#thematic">Thematic Sessions</a></li>
+              <li><a href="#doctoral">Doctoral Mentoring Programme</a></li>
               <li><a href="#dates">Important Dates</a></li>
               <li><a href="#register">Registration</a></li>
             </ul>
@@ -544,13 +546,14 @@
           representations of space can be incorporated in formal models of space, at different scales, from geographic to
           personal space.<br></p>
 
-        <p>This COSIT’s edition theme will be <b>Cognition and Flows</b>, recognising the value of considering the cognitive
-          foundations of human behaviour and their role in shaping large-scale geographic flows and interactions. Given the
-          growing wealth in large, detailed behavioural and environmental data capturing the <i>real world</i>, never have we had
-          such opportunity to close the gap between our understanding of human spatial behaviour and aggregated flows e.g.,
-          mobility, migration, inequalities, economic activity, spread of information, etc. In addition to any topics related to
-          spatial information and cognition, we particularly encourage submissions that explore how cognition and behaviour
-          shape the production of flows, their evolution, and ultimately influence the nature of spaces and societies. <br></p>
+        <p>We welcome contributions from across any areas under the COSIT topics listed below. This COSIT’s edition theme will
+          be <b>Cognition and Flows</b>, recognising the value of considering the cognitive foundations of human behaviour and their
+          role in shaping large-scale geographic flows and interactions. Given the growing wealth in large, detailed behavioural
+          and environmental data capturing the <em>real world</em>, never have we had such opportunity to close the gap between our
+          understanding of human spatial behaviour and aggregated flows e.g., mobility, migration, inequalities, economic
+          activity, spread of information, etc. In addition to any topics related to spatial information and cognition, we
+          particularly encourage submissions that explore how cognition and behaviour shape the production of flows, their
+          evolution, and ultimately influence the nature of spaces and societies.<br></p>
 
         <h3>COSIT Topics</h3>
         <p>COSIT is an intensive, single-track conference held over four days, featuring paper presentations and special
@@ -580,7 +583,7 @@
           <li>ontology of space and time</li>
           <li>place and spatial information theory</li>
           <li>social and cultural organisation of space</li>
-          <li>spatial agent-based models of human and social behaviour</li>
+          <li>spatial agent-based simulations of human and social phenomena</li>
           <li>spatial and temporal language</li>
           <li>spatial cognition and neuroscience</li>
           <li>spatial decision support, impact of model design</li>
@@ -672,6 +675,27 @@
 
         <p><b>Authors are responsible for the conversion of their papers to the LaTeX template.</b></p>
 
+      </div>
+    </section>
+
+    <section id="thematic">
+      <style>
+        #thematic p {
+          text-align: justify;
+          margin-bottom: 1rem;
+          /* increases space below paragraphs */
+        }
+      </style>
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Thematic Sessions<br></h2>
+        <p>We invite proposals for thematic sessions to take place during the conference. These short sessions should focus on a
+          specific topic within spatial information theory or tie into the general conference topic of <b>Cognition and Flows</b> and
+          can take on a range of formats (e.g., lightning talks, panel, discussion, hands-on activity, workshop). A call for
+          these sessions will follow shortly. <br></p>
+
+        <p>Activities that can fit into a half-day timeslot are welcome. Thematic session organisers, speakers, and participants
+          need to be registered for the main conference to attend. To submit a proposal, please complete this form <b>(submission form coming soon)</b> by February
+          13th, 2026. Please direct any questions regarding thematic sessions to Dr. Clio Andris at <a href="mailto:clio@gatech.edu">clio@gatech.edu</a>.<br></p>
       </div>
     </section>
 
