--- a/index.html
+++ b/index.html
@@ -776,6 +776,17 @@
           text-align: left;
         }
 
+        #doctoral ol.letters_indent {
+          list-style-type: upper-alpha;
+          /* A, B, C, ... */
+          padding-left: 1.5rem;
+          /* space for the list marker */
+          margin-left: 0.5rem;
+          /* indentation from the left edge */
+          margin-top: 0.35rem;
+          text-align: left;
+        }
+
         /* Ordered list with numbers */
         #doctoral ol.decimal {
           list-style-type: decimal;
@@ -840,7 +851,7 @@
           <li>Your chosen type of <b>Feedback Pillar</b> A, B, or C, for the selected option: </li>
         </ol>
 
-        <ol class="letters">
+        <ol class="letters_indent">
           <li><em>Early Stage Proposal:</em> Provide a detailed account of your research problem / issue,
             method, etc., and the specifics of what you wish to get feedback on.</li>
           <li><em>Later Stage Summary:</em> Provide a detailed summary/proposal/plan of your PhD research,
@@ -849,13 +860,16 @@
             review and describe how this paper fits into your overall PhD research goals.</li>
         </ol>
 
-        <p>All submitted EOIs will be ranked but not formally peer-reviewed. Accepted EOIs will be distributed among the mentees
-          and their COSIT 2026 mentors as a single PDF document. Doctoral mentees will also be encouraged to publish their
-          one-page PhD topic overviews (item 2 above) in a document that will be shared with all conference attendees and
+        <p>All submitted EOIs will be ranked but not formally peer-reviewed. Accepted EOIs will be distributed among the
+          mentees
+          and their COSIT 2026 mentors as a single PDF document. Doctoral mentees will also be encouraged to publish
+          their
+          one-page PhD topic overviews (item 2 above) in a document that will be shared with all conference attendees
+          and
           archived via the Open Science Framework with the volume DOI.</br></p>
 
-        <p>Please <a
-            href="https://forms.gle/WXJzbrvwnzV3nTBr5" target="_blank">complete this form</a> to submit your Expression of Interest (EOI) to the Doctoral Mentoring Chair. Please direct any
+        <p>Please <a href="https://forms.gle/WXJzbrvwnzV3nTBr5" target="_blank">complete this form</a> to submit your
+          Expression of Interest (EOI) to the Doctoral Mentoring Chair. Please direct any
           questions regarding the doctoral mentoring programme to Dr. Crystal Bae at <a
             href="mailto:cbae@uchicago.edu">cbae@uchicago.edu</a>.</br></p>
 
