--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
           /* indentation for bullets */
           margin-top: 0.35rem;
           /* margin-bottom: 1rem; */
-          text-align: left;
+          text-align: justify;
           /* aligns list text to the left */
         }
 
@@ -758,7 +758,7 @@
           /* indentation for bullets */
           margin-top: 0.35rem;
           /* margin-bottom: 1rem; */
-          text-align: left;
+          text-align: justify;
           /* aligns list text to the left */
         }
 
@@ -773,7 +773,7 @@
           /* A, B, C, ... */
           padding-left: 1.5rem;
           margin-top: 0.35rem;
-          text-align: left;
+          text-align: justify;
         }
 
         #doctoral ol.letters_indent {
@@ -781,10 +781,10 @@
           /* A, B, C, ... */
           padding-left: 1.5rem;
           /* space for the list marker */
-          margin-left: 0.5rem;
+          margin-left: 1.0rem;
           /* indentation from the left edge */
           margin-top: 0.35rem;
-          text-align: left;
+          text-align: justify;
         }
 
         /* Ordered list with numbers */
@@ -793,7 +793,7 @@
           /* 1, 2, 3, ... */
           padding-left: 1.5rem;
           margin-top: 0.35rem;
-          text-align: left;
+          text-align: justify;
         }
       </style>
       <div class="container section-title" data-aos="fade-up">
