--- a/index.html
+++ b/index.html
@@ -887,13 +887,13 @@
 
         <p>Short paper decision: May 15th, 2026<br></p>
 
-        <!-- <p>Thematic session proposals: February 13th, 2026<br></p> -->
+        <p>Thematic sessions proposals: February 13th, 2026<br></p>
 
-        <!-- <p>Thematic session decision: March 6th, 2026<br></p> -->
+        <p>Thematic sessions decision: March 6th, 2026<br></p>
 
-        <!-- <p>Doctoral student mentorship program submission: April 30th, 2026<br></p> -->
+        <p>Doctoral mentoring programme submission: April 30th, 2026<br></p>
 
-        <!-- <p>Doctoral student mentorship program decision: May 15th, 2026<br></p> -->
+        <p>Doctoral mentoring programme decision: May 15th, 2026<br></p>
 
         <p>Journal article / book presentation submission: May 15th, 2026<br></p>
 
