--- a/index.html
+++ b/index.html
@@ -877,27 +877,34 @@
     </section>
 
     <section id="dates" class="dates section light-background">
+      <style>
+        #dates p {
+          text-align: center;
+          margin-bottom: 0.5rem;
+          /* increases space below paragraphs */
+        }
+      </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Important Dates<br></h2>
-        <p>Full paper submission: February 20th, 2026<br></p>
+        <p>Full paper submission: February 20, 2026<br></p>
 
-        <p>Full paper decision: April 10th, 2026<br></p>
+        <p>Full paper decision: April 10, 2026<br></p>
 
-        <p>Short paper submission: April 17th, 2026<br></p>
+        <p>Short paper submission: April 17, 2026<br></p>
 
-        <p>Short paper decision: May 15th, 2026<br></p>
+        <p>Short paper decision: May 15, 2026<br></p>
 
-        <p>Thematic sessions proposals: February 13th, 2026<br></p>
+        <p>Thematic sessions proposals: February 13, 2026<br></p>
 
-        <p>Thematic sessions decision: March 6th, 2026<br></p>
+        <p>Thematic sessions decision: March 6, 2026<br></p>
 
-        <p>Doctoral mentoring programme submission: April 30th, 2026<br></p>
+        <p>Doctoral mentoring programme submission: April 30, 2026<br></p>
 
-        <p>Doctoral mentoring programme decision: May 15th, 2026<br></p>
+        <p>Doctoral mentoring programme decision: May 15, 2026<br></p>
 
-        <p>Journal article / book presentation submission: May 15th, 2026<br></p>
+        <p>Journal article / book presentation submission: May 15, 2026<br></p>
 
-        <p>Journal article / book presentation decision: May 29th, 2026<br></p>
+        <p>Journal article / book presentation decision: May 29, 2026<br></p>
       </div>
     </section>
 
