--- a/index.html
+++ b/index.html
@@ -1725,12 +1725,11 @@
           </div>
         </div>
 
-        <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
-        </div> -->
+        <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+          <a href="https://www.linkedin.com/company/cosit2026/" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-linkedin"></i>
+          </a>
+        </div>
 
       </div>
     </div>
