--- a/index.html
+++ b/index.html
@@ -154,7 +154,33 @@
         </div>
       </div>
 
+      <a href="https://www.linkedin.com/company/cosit2026/" class="linkedin-bottom-right" target="_blank"
+        rel="noopener noreferrer">
+        <i class="bi bi-linkedin"></i>
+      </a>
+
     </section><!-- /Hero Section -->
+
+    <style>
+      #hero .linkedin-bottom-right {
+        position: absolute;
+        /* stays within hero section */
+        bottom: 20px;
+        /* distance from bottom */
+        right: 20px;
+        /* distance from right */
+        font-size: 1.8rem;
+        /* size of the icon */
+        color: #0a66c2;
+        /* LinkedIn blue */
+        z-index: 1000;
+        transition: transform 0.2s ease;
+      }
+
+      #hero .linkedin-bottom-right:hover {
+        transform: scale(1.1);
+      }
+    </style>
 
     <!-- Speakers Section -->
     <!-- <section id="speakers" class="speakers section"> -->
