--- a/index.html
+++ b/index.html
@@ -150,35 +150,42 @@
               <h3>When</h3>
               <p>Tuesday to Friday<br>22-25 September 2026</p>
             </div>
+            <div class="col-12 mt-3 d-flex align-items-center justify-content-center linkedin-section">
+              <a href="https://www.linkedin.com/company/cosit2026/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+              </a>
+              <span>#cosit2026</span>
+            </div>
           </div>
         </div>
       </div>
 
-      <a href="https://www.linkedin.com/company/cosit2026/" class="linkedin-bottom-right" target="_blank"
-        rel="noopener noreferrer">
-        <i class="bi bi-linkedin"></i>
-      </a>
-
     </section><!-- /Hero Section -->
 
     <style>
-      #hero .linkedin-bottom-right {
-        position: absolute;
-        /* stays within hero section */
-        bottom: 50px;
-        /* distance from bottom */
-        right: 20px;
-        /* distance from right */
-        font-size: 1.8rem;
-        /* size of the icon */
-        color: #0a66c2;
-        /* LinkedIn blue */
-        z-index: 1000;
-        transition: transform 0.2s ease;
+      .linkedin-section {
+        gap: 8px;
+        /* space between icon and text */
       }
 
-      #hero .linkedin-bottom-right:hover {
+      .linkedin-section i {
+        font-size: 1.8rem;
+        color: #0a66c2;
+        /* LinkedIn blue */
+        transition: transform 0.2s ease, color 0.2s ease;
+      }
+
+      .linkedin-section span {
+        font-size: 1rem;
+        color: #ffffff;
+        /* adjust if background is dark */
+        font-weight: 500;
+      }
+
+      .linkedin-section a:hover i {
         transform: scale(1.1);
+        color: #004182;
+        /* darker on hover */
       }
     </style>
 
