--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical
                 aspects of space and spatial information.</p>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-3">
               <h3>Where</h3>
               <p>The Hospitium, York, UK</p>
             </div>
@@ -150,7 +150,7 @@
               <h3>When</h3>
               <p>Tuesday to Friday<br>22-25 September 2026</p>
             </div>
-            <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center linkedin-section">
+            <div class="col-lg-1 text-center linkedin-section">
               <a href="https://www.linkedin.com/company/cosit2026/" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-linkedin"></i>
               </a>
