--- a/index.html
+++ b/index.html
@@ -729,8 +729,9 @@
 
         <p>Activities that can fit into a half-day timeslot are welcome. Thematic session organisers, speakers, and
           participants
-          need to be registered for the main conference to attend. To submit a proposal, please complete this form
-          <b>(submission form coming soon)</b> by February
+          need to be registered for the main conference to attend. To submit a proposal, please complete the submission
+          form
+          <b>(coming soon)</b> by February
           13th, 2026. Please direct any questions regarding thematic sessions to Dr. Clio Andris at <a
             href="mailto:clio@gatech.edu">clio@gatech.edu</a>.<br>
         </p>
@@ -868,9 +869,8 @@
           archived via the Open Science Framework with the volume DOI.</br></p>
 
         <p>Please <a href="https://forms.gle/WXJzbrvwnzV3nTBr5" target="_blank">complete this form</a> to submit your
-          Expression of Interest (EOI) to the Doctoral Mentoring Chair. Please direct any
-          questions regarding the doctoral mentoring programme to Dr. Crystal Bae at <a
-            href="mailto:cbae@uchicago.edu">cbae@uchicago.edu</a>.</br></p>
+          Expression of Interest (EOI) to the Doctoral Mentoring Chair. Any questions regarding this programme can
+          be sent to Dr. Crystal Bae at <a href="mailto:cbae@uchicago.edu">cbae@uchicago.edu</a>.</br></p>
 
       </div>
     </section>
@@ -1294,6 +1294,15 @@
                 <br>
                 <span>University of Leeds, UK</span>
               </div>
+
+              <div class="person">
+                <a href="https://environment.leeds.ac.uk/geography/staff/9293/professor-ed-manley" target="_blank">
+                  <b>Ed Manley</b>
+                </a>
+                <br>
+                <span>University of Leeds, UK</span>
+              </div>
+
             </div>
           </div>
 
@@ -1303,20 +1312,20 @@
               <h3>Programme Chairs</h3>
 
               <div class="person">
-                <a href="https://www.liverpool.ac.uk/people/gabriele-filomena" target="_blank">
-                  <b>Gabriele Filomena</b>
-                </a>
-                <br>
-                <span>University of Liverpool, UK</span>
-              </div>
-
-              <div class="person">
                 <a href="https://www.uni-augsburg.de/en/fakultaet/fai/geo/prof/geoinf/geoinf-team/s-timpf/"
                   target="_blank">
                   <b>Sabine Timpf</b>
                 </a>
                 <br>
                 <span>University of Augsburg, Germany</span>
+              </div>
+
+              <div class="person">
+                <a href="https://www.liverpool.ac.uk/people/gabriele-filomena" target="_blank">
+                  <b>Gabriele Filomena</b>
+                </a>
+                <br>
+                <span>University of Liverpool, UK</span>
               </div>
 
               <div class="person">
@@ -1343,7 +1352,7 @@
           <!-- Member 3 -->
           <div class="col-lg-4 col-md-5">
             <div class="member-info">
-              <h3>Thematic Sessions Chair</h3>
+              <h3>Themed Sessions Chair</h3>
               <a href="https://planning.gatech.edu/people/clio-andris" target="_blank">
                 <b>Clio Andris</b>
               </a>
@@ -1351,7 +1360,7 @@
               <span>Georgia Institute of Technology, USA</span>
             </div>
             <div class="member-info">
-              <h3>Doctoral Mentoring Chair</h3>
+              <h3>Doctoral Mentorship Chair</h3>
               <a href="https://spatial.uchicago.edu/directory/Crystal-Bae" target="_blank">
                 <b>Crystal Bae</b>
               </a>
