--- a/index.html
+++ b/index.html
@@ -720,20 +720,14 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Thematic Sessions<br></h2>
         <p>We invite proposals for thematic sessions to take place during the conference. These short sessions should
-          focus on a
-          specific topic within spatial information theory or tie into the general conference topic of <b>Cognition and
+          focus on a specific topic within spatial information theory or tie into the general conference topic of <b>Cognition and
             Flows</b> and
-          can take on a range of formats (e.g., lightning talks, panel, discussion, hands-on activity, workshop). A call
-          for
-          these sessions will follow shortly. <br></p>
+          can take on a range of formats (e.g., lightning talks, panel, discussion, hands-on activity, workshop).<br></p>
 
-        <p>Activities that can fit into a half-day timeslot are welcome. Thematic session organisers, speakers, and
-          participants
-          need to be registered for the main conference to attend. To submit a proposal, please complete the submission
-          form
-          <b>(coming soon)</b> by February
-          13th, 2026. Please direct any questions regarding thematic sessions to Dr. Clio Andris at <a
-            href="mailto:clio@gatech.edu">clio@gatech.edu</a>.<br>
+        <p><em>Activities that can fit into a 45 minute or 1.5 hour long session are welcome</em>. Thematic session organisers, speakers, and 
+          participants need to be registered for the main conference to attend. To submit a proposal, please <a href="https://forms.gle/DCvB49pNUqBVimH26" target="_blank">complete this submission 
+          form</a> by Friday, February 13<sup>th</sup>, 2026. Decisions will be made on March 6<sup>th</sup>, 2026. Please direct any questions 
+          regarding thematic sessions to Dr. Clio Andris at <a href="mailto:clio@gatech.edu">clio@gatech.edu</a>.<br>
         </p>
       </div>
     </section>
