--- a/index.html
+++ b/index.html
@@ -654,6 +654,8 @@
           previously published literature, clarity of presentation, and interdisciplinary considerations. Manuscripts
           must
           describe original work that has not been submitted and published elsewhere. <br></p>
+          
+          <p><a class="cta-btn" href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers#tab-recent-activity">Submit Full Paper</a></p>
 
         <h3>Short papers</h3>
         <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature
