--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
           <p>
           <div class="col-md-12 text-center">
-            <button type="button" onclick="window.location.href='https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers#tab-recent-activityhttps://your-link-here.com'">
+            <button type="button" class="cta-btn" onclick="window.location.href='https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers#tab-recent-activityhttps://your-link-here.com'">
               Submit Full Paper here
             </button>
           </div>          
