--- a/index.html
+++ b/index.html
@@ -656,11 +656,9 @@
           describe original work that has not been submitted and published elsewhere. <br></p>
 
           <p>
-          <div class="col-md-12 text-center">
-            <button type="button" class="cta-btn" onclick="window.location.href='https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers#tab-recent-activityhttps://your-link-here.com'">
+            <button onclick="window.location.href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers"" type="button" class="cta-btn">
               Submit Full Paper here
-            </button>
-          </div>          
+            </button>         
         </p>
 
         <h3>Short papers</h3>
