--- a/index.html
+++ b/index.html
@@ -661,6 +661,12 @@
             </button>         
         </p>
 
+        <div class="col-md-12 text-center">
+   <a href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers" class="btn btn-primary">
+      Read Submission Guidelines
+   </a>
+</div>
+
         <h3>Short papers</h3>
         <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature
           results.
