--- a/index.html
+++ b/index.html
@@ -655,15 +655,9 @@
           must
           describe original work that has not been submitted and published elsewhere. <br></p>
 
-          <p>
-            <button onclick="window.location.href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers"" type="button" class="cta-btn">
-              Submit Full Paper here
-            </button>         
-        </p>
-
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-start">
    <a href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers" class="btn btn-primary">
-      Read Submission Guidelines
+      Submit Full Paper here
    </a>
 </div>
 
