--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
           describe original work that has not been submitted and published elsewhere. <br></p>
 
         <div class="col-md-12 text-start">
-   <a href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers" class="btn btn-primary">
+   <a href="https://openreview.net/group?id=COSIT/2026/Conference_Full_Papers" class="btn btn-primary" target="_blank">
       Submit Full Paper here
    </a>
 </div>
@@ -671,6 +671,12 @@
           the option of having their papers included in the conference proceedings. All other accepted short papers will
           be
           shared in a non-archival digital repository. <br></p>
+
+                  <div class="col-md-12 text-start">
+   <a href="https://openreview.net/group?id=COSIT/2026/Conference_Short_Papers" class="btn btn-primary" target="_blank">
+      Submit Short Paper here
+   </a>
+</div>
 
         <h3>Journal Article or Book Presentation</h3>
         <p>The conference will run a special thematic session dedicated to providing authors of recently published
