--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
           and book presentations), at least one of the paper authors must register by the registration deadline.<br></p>
 
         <h3>Full papers</h3>
-        <p>Full research papers of 12-20 pages will be reviewed by three members of the programme committee.
+        <p>Full research papers of 12-20 pages (including references) will be reviewed by three members of the programme committee.
           High-quality
           submissions will be accepted for presentation at the conference and will be published in the conference
           proceedings.
@@ -662,7 +662,7 @@
 </div>
 
         <h3>Short papers</h3>
-        <p>Short papers of 7 pages (max) present late-breaking and in-progress research, with less emphasis on mature
+        <p>Short papers of maximum 7 pages (including references) present late-breaking and in-progress research, with less emphasis on mature
           results.
           All submissions will be reviewed by members of the programme committee. Accepted submissions will be selected
           for
