--- a/index.html
+++ b/index.html
@@ -1388,11 +1388,66 @@
     </section>
 
     <section id="pro-com">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Programme Committee<br></h2>
-        <p>Coming soon!</p>
+  <div class="container">
+
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Programme Committee</h2>
+    </div>
+
+    <div class="row gy-4 justify-content-center">
+
+      <!-- Column 1 -->
+      <div class="col-lg-4 col-md-5">
+        <div class="member-info">
+
+          <div class="person">
+            <b>Name 1</b>, <span>Affiliation 1</span>
+          </div>
+
+          <div class="person">
+            <b>Name 2</b>, <span>Affiliation 2</span>
+          </div>
+
+          <!-- repeat until ~24 names -->
+        </div>
       </div>
-    </section>
+
+      <!-- Column 2 -->
+      <div class="col-lg-4 col-md-5">
+        <div class="member-info">
+
+          <div class="person">
+            <b>Name 25</b>, <span>Affiliation 25</span>
+          </div>
+
+          <div class="person">
+            <b>Name 26</b>, <span>Affiliation 26</span>
+          </div>
+
+          <!-- repeat -->
+        </div>
+      </div>
+
+      <!-- Column 3 -->
+      <div class="col-lg-4 col-md-5">
+        <div class="member-info">
+
+          <div class="person">
+            <b>Name 49</b>, <span>Affiliation 49</span>
+          </div>
+
+          <div class="person">
+            <b>Name 50</b>, <span>Affiliation 50</span>
+          </div>
+
+          <!-- repeat until 72 -->
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- Sponsors Section -->
     <section id="sponsors" class="sponsors section light-background">
